message DialogOption {
	required int32 nextDialog = 1;
	required string text = 2;
}


message DialogData {
	required int32 Id = 1;
	required int32 DialogType = 2 [default = DIALOG];
	required string text = 3;
	repeated DialogOption OptionList = 4;		// array of DialogOption
}


message DialogTree {
	repeated DialogData Dialogs = 1;	// array of DialogData
	required int32 currentDialog = 2;
}


